1.    Add 'Works with any diet' box to 'section-meals' 2.    Include 'See all recipes' link in 'section-meals' 3.    Apply hovering effect to the first two cards in 'section-meals' 4.    Add 'center-text' helper class to 'general.css' 5.    Fix missing margin-bottom in 'subheading' class

--- a/css/general.css
+++ b/css/general.css
@@ -146,7 +146,7 @@ body {
   font-weight: 500;
   color: #cf711f;
   text-transform: uppercase;
-  margin-bottom: 1.6;
+  margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
 }
 
@@ -197,8 +197,34 @@ body {
   margin-left: 1rem;
 } */
 
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
+/* HELPER/SETTINGS CLASSES */
+
+.center-text {
+  text-align: center;
+}
+
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
 }
 
 strong {
